--- a/pages/clockin/clockin.wxml
+++ b/pages/clockin/clockin.wxml
@@ -53,7 +53,7 @@
 
         <!--添加更多训练营-->
         <view class='add_more_study'>
-          <navigator url='' class='add_more_href'>
+          <navigator url='/pages/clockinplaza/clockinplaza' class='add_more_href'>
             <image src='/pages/imgs/add.png'></image>
             <view class='add_txt'>加入更多训练营 </view>
           </navigator>
@@ -95,7 +95,7 @@
         </view>
         <!--添加更多训练营-->
         <view class='add_more_study'>
-          <navigator url='' class='add_more_href'>
+          <navigator url='/pages/studyplaza/studyplaza' class='add_more_href'>
             <image src='/pages/imgs/add.png'></image>
             <view class='add_txt'>加入更多训练营 </view>
           </navigator>
